fix(navbar): search_mobile align items center

--- a/_croucher/_navbar.scss
+++ b/_croucher/_navbar.scss
@@ -409,7 +409,7 @@
             gap: 3.5px;
             color: $black;
             font-weight: 400;
-            justify-items: center;
+            align-items: center;
           }
           form {
             position: relative;
